--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true
+search_full_content      : true
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -92,11 +92,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "DaeHyung LEE"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "Super Mini Junior Developer"
   location         : "Somewhere"
-  email            :
+  email            : "eogud7126@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
